--- a/slutuppgift/src/App.css
+++ b/slutuppgift/src/App.css
@@ -153,3 +153,15 @@ img {
   font-weight: 700;
   font-size: 22px;
 }
+
+.meetup-starting {
+  color: green;
+  font-weight: 700;
+  font-size: 22px;
+}
+
+.registration-confirmed {
+  color: green;
+  font-weight: 800;
+  font-size: 22px;
+}
